maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:64: error: ';' expected but 'else' found.
else return
^